# ebitengine_live2d_demo

./: .gitignore  README.md  go.mod  main.go
Projects/proj.mac.cmake/: CMakeLists.txt  make
Projects/proj.mac.cmake/src/: CMakeLists.txt  CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppDelegate.cpp  LAppLive2DManager.cpp  LAppPal.cpp  LAppPal.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  cubism.cpp  mainMinimum.cpp
