add_library(${LIB_NAME} SHARED
    LAppAllocator.cpp
    LAppAllocator.hpp
    LAppDefine.cpp
    LAppDefine.hpp
    LAppPal.cpp
    LAppPal.hpp
    LAppTextureManager.cpp
    LAppTextureManager.hpp
    TouchManager.cpp
    TouchManager.hpp
    CubismUserModelExtend.cpp
    CubismUserModelExtend.hpp
    CubismSampleViewMatrix.cpp
    CubismSampleViewMatrix.hpp
    MouseActionManager.cpp
    MouseActionManager.hpp
    cubism.cpp
    mainMinimum.cpp
)
